﻿更新履歴
20221108.51
・直接ログインの２段階認証(MFA)対応
・上記に伴うlogin APIのendpoint、cookie取得方法の変更
・firefoxからのcookie取得機能追加
  -nico-cookies firefox[:profile|cookiefile]
  e.g.  
  - profile default-release のcookieを取得
      ./livedl -nico-cookies firefox
  - profile NicoTaro のcookieを取得
      ./livedl -nico-cookies firefox:NicoTaro 
  - 直接cookiefileを指定
      ./livedl -nico-cookies firefox:'C:/Users/*******/AppData/Roaming/Mozilla/Firefox/Profiles/*****/cookies.sqlite' 
※Mac/Linuxで `cookies from browser failed: firefox profiles not found`が 表示される場合は報告おねがいします   
※直接cookiefile指定の場合は必ず'か"で囲ってください  
※プロファイルにspaceを含む場合は'か"で囲ってください  

20220905.50
・ニコ生のコメントのvposを補正
  -nico-adjust-vpos=on
     コメント書き出し時にvposの値を補正する
     vposの値が-1000より小さい場合はコメント出力しない
  -nico-adjust-vpos=off
     コメント書き出し時にvposの値をそのまま出力する(デフォルト)
  ※ExtractChunks()もコメントvposを補正するように修正
  ※ニコ生の生放送を録画する際、再接続してもkvsテーブルは更新されません
・Youtubeのコメントにemojiを出力する/しない
  -yt-emoji=on
     コメントにemojiを表示する(デフォルト)
  -yt-emoji=off
  コメントにemojiを表示しない
・音声のみ録画対応
　-nico-limit-bw に audio_high または audio_only を指定してください
・-http-timeout の設定を保存するように修正
・live2.* -> live.* に修正
・その他主にコメント関連の修正
  - livedl.exeとsqlite3ファイルが別のフォルダーにある場合、コメント出力時にxmlファイルに
    -数字が付かなかったのを修正
  - ニコ生の生放送の最初に取得するコメント数を1000から100に変更した(サーバー側の仕様による)

20211017.49
・livedlのあるディレクトリ以外から実行する時カレントディレクトリにconf.dbが作成されるのを修正
https://egg.5ch.net/test/read.cgi/software/1595715643/922
例: C:\bin\livedl\livedl.exe を D:\home\tmp をカレントディレクトリとして実行した場合、conf.dbは D:\home\tmp に作成されてしまう

仕様：conf.dbは実行するlivedlと同じディレクトリに作成する
      ただし、オプション -no-chdir が指定された場合はカレントディレクトリにconf.dbを作成する
      (livedl実行ファイルがユーザ書き込み権限のないディレクトリにある場合を想定)

20210607.48
・livedl で YouTube Live のアーカイブコメントの取得開始時刻を指定するオプション
https://egg.5ch.net/test/read.cgi/software/1595715643/789

使用例：
　livedl -yt-comment-start 3:21:06 https://～
  特殊例 0：続きからコメント取得  1：最初からコメント取得

20210202.47
・livedl で-yt-no-streamlink=on -yt-no-youtube-dl=on が指定されたとき、YouTube Live のコメントを永久に取得し続けるパッチ
https://egg.5ch.net/test/read.cgi/software/1595715643/567

・livedl を YouTube Live の直近の仕様変更に対応