@@ -1,5 +1,5 @@
 
 package buildno
 
-var BuildDate = "20221108"
-var BuildNo = "51"
+var BuildDate = "20221111"
+var BuildNo = "52beta"
