@@ -1,4 +1,11 @@
 ﻿更新履歴
+202xxxxx.52
+・録画済みのデータベース(sqlite3)の各種情報を表示するコマンド(-dbinfo)追加
+    ./livedl -dbinfo -- 'データーベースのファイル名をフルパスで'
+  - youtubeのデーターベースはcomment情報のみ表示
+  - データベース情報表示、データベースextractの際DBをreadonlyで開くように修正
+  - データベースファイルの存在チェックを追加
+
 20221108.51
 ・直接ログインの２段階認証(MFA)対応
 ・上記に伴うlogin APIのendpoint、cookie取得方法の変更
